log
Thu 21 Mar 2024 02:48:14 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, elemento);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
05b6c17
